# c1-coursework

./: .gitignore  .gitlab-ci.yml  README.md  best_hyperparameters.txt  build_docs.sh  coursework_requirements.txt  docker-compose.yml  extract_pdf.py  extract_pdf_text.py  inspect_pkl.py  pyproject.toml  requirements.txt  run_local.sh  synthetic_5d_data.pkl  vercel.json
api/: index.py
backend/: Dockerfile  data.py  interpolator.py  main.py  main_train_fix.py  performance_benchmark_results.json  performance_results.json  profile_performance.py  pyproject.toml
backend/api/: __init__.py  main.py
backend/fivedreg/: data.py  model.py
backend/interpolator/: model.py
backend/models/: pytorch_model.pkl  test_model.pkl
backend/scripts/: backend-setup.sh  benchmark_performance.py  docker-logs.sh  docker-start.sh  docker-stop.sh  setup.sh  start_server.sh  test-pipeline.sh  tune_hyperparameters.py
backend/tests/: test_data.py  test_main.py  test_model.py
docs/: conf.py  index.rst  installation.rst  modules.rst  performance.rst  quickstart.rst  testing.rst  usage.rst
docs/_build/doctrees/: environment.pickle  index.doctree  installation.doctree  modules.doctree  performance.doctree  quickstart.doctree  testing.doctree  usage.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  installation.html  modules.html  objects.inv  performance.html  py-modindex.html  quickstart.html  search.html  searchindex.js  testing.html  usage.html
docs/api/: data.rst  endpoints.rst  index.rst  model.rst
frontend/: Dockerfile  next.config.ts  package-lock.json
frontend/app/: apple-style.css  layout.tsx  page.tsx
frontend/app/predict/: page.tsx
(+33 files in other folders)
