[project]
name = "interpolator"
version = "1.0"
description = "Tiny 5D neural-net interpolator (PyTorch) with normalization & early stopping."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Boris Bolliet" }]

dependencies = [
    "numpy>=1.23",
    "torch>=2.2",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.9",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "psutil>=5.9.0",
    "requests>=2.28.0"  # For testing scripts
]

[project.urls]
